--- a/file6withphoto.html
+++ b/file6withphoto.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <style>
         body {
-            background-image: url('file:///C:/Users/bende/GraduationCyberSecurity.png'); /* Change 'background.jpg' to your image file name */
+            background-image: url('GraduationCyberSecurity.png'); /* Change 'background.jpg' to your image file name */
             background-size: cover; /* This will make the background cover the entire page */
             margin: 0; /* Remove default margin */
             height: 100vh; /* Make sure the body takes the full height of the viewport */
@@ -16,3 +16,6 @@
     <p>Welcome to my webpage!</p>
 </body>
 </html>
+
+
+
