--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>A Simple HTML Document</title>
+    <title>Ben's Best Bytes</title>
     <meta charset="utf-8">
     <style>
         body {
             background-image: url('GraduationCyberSecurity.png'); /* Change 'background.jpg' to your image file name */
             background-size: cover; /* This will make the background cover the entire page */
-            margin: 0; /* Remove default margin */
-            height: 100vh; /* Make sure the body takes the full height of the viewport */
+            margin: 10; /* Remove default margin */
+            height: 90vh; /* Make sure the body takes the full height of the viewport */
         }
     </style>
 </head>
