--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         body {
             background-image: url('GraduationCyberSecurity.png'); /* Change 'background.jpg' to your image file name */
             background-size: cover; /* This will make the background cover the entire page */
-            margin: 20; /* Remove default margin */
+            margin: 0; /* Remove default margin */
+            padding: 20px; /* Add padding if needed */
             height: 100vh; /* Make sure the body takes the full height of the viewport */
         }
     </style>
