--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Ben's Best Bytes</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             background-image: url('GraduationCyberSecurity.png'); /* Change 'background.jpg' to your image file name */
             background-size: cover; /* This will make the background cover the entire page */
-            margin: 20; /* Remove default margin */
+            margin: 0; /* Remove default margin */
             padding: 20px; /* Add padding if needed */
-            height: 80vh; /* Make sure the body takes the full height of the viewport */
+            height: 85vh; /* Make sure the body takes the full height of the viewport */
         }
+
+        p {
+            font-size: 16px; /* Default font size */
+        }
+
+        @media (min-width: 850px) {
+            p {
+                font-size: 18px; /* Font size for tablets and larger screens */
+            }
+            
     </style>
 </head>
 <body>
     <p>Welcome to my webpage!</p>
 </body>
 </html>
-
-
 
