--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html>
         }
 
         p {
-            font-size: 24px; /* Default font size increased by 50% */
+            font-size: 36px; /* Default font size increased by 50% */
         }
 
         @media (min-width: 1760px) {
@@ -27,8 +27,8 @@ html>
             /* Adjust styles for iPhone and other small screens */
             body {
                 background-size: 90%; /* Adjust background size for small screens */
-                margin-left: auto;
-                margin-right: auto;
+                margin-left: 30px;
+                margin-right: 10px;
             }
         }
     </style>
