--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background-image: url('GraduationCyberSecurity.png'); /* Change 'background.jpg' to your image file name */
-            background-size: cover; /* This will make the background cover the entire page */
+            background-size: block; /* This will make the background cover the entire page */
             margin: 0; /* Remove default margin */
             padding: 20px; /* Add padding if needed */
             height: 85vh; /* Make sure the body takes the full height of the viewport */
