--- a/index.html
+++ b/index.html
@@ -1,32 +1,25 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ben's Best Bytes</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            background-image: url('GraduationCyberSecurity.png'); /* Change 'background.jpg' to your image file name */
-            background-size: cover; /* This will make the background cover the entire page */
-            margin: 0; /* Remove default margin */
-            padding: 20px; /* Add padding if needed */
-            height: 85vh; /* Make sure the body takes the full height of the viewport */
-        }
-
-        p {
-            font-size: 16px; /* Default font size */
-        }
-
-        @media (min-width: 1300px) {
-            p {
-                font-size: 18px; /* Font size for tablets and larger screens */
-            }
-            
-    </style>
+  <title>Ben's Best Bytes</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .container {
+      height: 75vh; /* 75% of viewport height */
+      background-image: url('GraduationcyberSecurity.png');
+      background-position: top;
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  </style>
 </head>
 <body>
-    <p>Welcome to my webpage!</p>
+  <div class="container"></div>
+  <p><b>Welcome to my webpage!</b></p>
+        <a href="https://tryhackme.com/p/b1tfl1pper" target="_blank" rel="noopener noreferrer">
+            Click me for My TryHackMe profile
+          </a>
+          
 </body>
 </html>
-
