--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     .container {
       height: 75vh; /* 75% of viewport height */
-      background-image: url('GraduationcyberSecurity.png');
+      background-image: url('GraduationCyberSecurity.png');
       background-position: top;
       background-repeat: no-repeat;
       background-size: contain;
