--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     .container {
-      height: 75vh; /* 75% of viewport height */
+      height: 60vh; /* 75% of viewport height */
       background-image: url('GraduationCyberSecurity.png');
       background-position: top;
       background-repeat: no-repeat;
@@ -18,7 +18,7 @@
   <div class="container"></div>
   <p><b>Welcome to my webpage!</b></p>
         <a href="https://tryhackme.com/p/b1tfl1pper" target="_blank" rel="noopener noreferrer">
-            Click me for My TryHackMe profile
+            Click me for my TryHackMe profile
           </a>
           
 </body>
