--- a/PASSWORDS_SUCK.html
+++ b/PASSWORDS_SUCK.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <h1>Passwords SUCK!</h1>
-  <img src="PASSWORDS_SUCK_files/passwordsSuck.png">
+  <img src="passwordsSuck.png">
 
   <h2>Why You Hate Them – and What to Do Instead</h2>
   <p>
@@ -86,6 +86,6 @@
     Use a password manager, embrace biometrics, and stop reusing passwords. You’ll be safer-and your memory will thank you!
   </p>
 
-  <img src="PASSWORDS_SUCK_files/thatsBetter.png" alt="Generated image" style="margin-top:2em;">
+  <img src="thatsBetter.png" alt="Generated image" style="margin-top:2em;">
 </body>
 </html>
