--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    .background-fade {
+  background-image: url('BensBestBytesLogo.jpg');
+  background-repeat: repeat;
+  background-size: 150px; /* Adjust size as needed */
+  background-position: center;
+  opacity: 0.1; /* Faded effect */
+    }
     .container {
       height: 30vh; /* 75% of viewport height */
       background-image: url('GraduationCyberSecurity.png');
@@ -32,6 +39,7 @@
   </style>
 </head>
 <body>
+  <body class="background-fade">
   <div class="container"></div>
   <p><b>Welcome to my webpage!</b></p>
   <a href="https://tryhackme.com/p/b1tfl1pper" target="_blank" rel="noopener noreferrer">
