--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     .background-fade {
-  background-image: url('BensBestBytesLogo.jpg');
-  background-repeat: repeat;
-  background-size: 150px; /* Adjust size as needed */
-  background-position: center;
-  opacity: 0.1; /* Faded effect */
+      background-image: url('BensBestBytesLogo.jpg');
+      background-repeat: repeat;
+      background-size: 150px; /* Adjust size as needed */
+      background-position: center;
+      opacity: 0.1; /* Faded effect */
     }
+     .banner {
+      height: 25vh; /* 25% of viewport height */
+      background-image: url('BensBestBytesBanner.jpg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+     }
     .container {
       height: 30vh; /* 75% of viewport height */
       background-image: url('GraduationCyberSecurity.png');
