--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-position: center;
       opacity: 0.4; /* Faded effect */
     }
-     .banner {
+     .container {
       height: 25vh; /* 25% of viewport height */
       background-image: url('BensBestBytesBanner.jpg');
       background-position: center;
@@ -20,7 +20,7 @@
       background-size: cover;
      }
     .container {
-      height: 30vh; /* 75% of viewport height */
+      height: 30vh;
       background-image: url('GraduationCyberSecurity.png');
       background-position: top;
       background-repeat: no-repeat;
