--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
       background-image: url('BensBestBytesLogo.jpg');
       background-repeat: repeat;
       background-size: 150px; /* Adjust size as needed */
-      background-position: center;
+      background-position: centre;
       opacity: 0.4; /* Faded effect */
     }
      .container {
       height: 25vh; /* 25% of viewport height */
       background-image: url('BensBestBytesBanner.jpg');
-      background-position: center;
+      background-position: top;
       background-repeat: no-repeat;
       background-size: cover;
      }
     .container {
       height: 30vh;
       background-image: url('GraduationCyberSecurity.png');
-      background-position: top;
+      background-position: relative;
       background-repeat: no-repeat;
       background-size: contain;
     }
