--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       background-size: 150px; /* Adjust size as needed */
       background-position: centre;
       opacity: 0.4; /* Faded effect */
+      min-height: 100vh;
     }
      .container {
       height: 25vh; /* 25% of viewport height */
@@ -19,7 +20,7 @@
       background-repeat: no-repeat;
       background-size: cover;
      }
-    .container {
+    .container2 {
       height: 30vh;
       background-image: url('GraduationCyberSecurity.png');
       background-position: relative;
