--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       background-image: url('BensBestBytesBanner.jpg');
       background-position: top;
       background-repeat: no-repeat;
-      background-size: cover;
+      background-size: contain;
      }
-    .container2 {
+    .container {
       height: 30vh;
       background-image: url('GraduationCyberSecurity.png');
       background-position: relative;
