--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body.background-fade {
+    body {
+    .body.background-fade {
       background-image: url('BensBestBytesLogo.jpg');
       background-repeat: repeat;
       background-size: 150px;
@@ -46,7 +47,7 @@
     }
   </style>
 </head>
-<body class="background-fade">
+<body>
   <div class="banner-container"></div>
   <div class="container"></div>
   <p><b>Welcome to my webpage!</b></p>
