--- a/index.html
+++ b/index.html
@@ -5,6 +5,41 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BensBestBytes</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url('BensBestBytesLogo.jpg');
+      background-repeat: repeat;
+      background-size: auto;
+    }
+
+    .header {
+      width: 100%;
+      height: 150px; /* Adjust height as needed */
+      background-image: url('BensBestBytesBanner.jpg');
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      text-align: center;
+    }
+
+    .header h1 {
+      margin: 0;
+      padding: 50px 0; /* Adjust padding to center the text vertically */
+      color: white; /* Adjust color if needed */
+      font-family: Arial, sans-serif;
+      font-size: 2em;
+    }    
     .container {
       height: 30vh; /* 75% of viewport height */
       background-image: url('GraduationCyberSecurity.png');
