--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
       background-size: 150px;
       background-position: center;
       opacity: 0.4;
-      z-index: -1;
     }
     .banner-container {
-      height: 25vh;
+      height: 60;
       background-image: url('BensBestBytesBanner.jpg');
       background-position: top center;
       background-repeat: no-repeat;
