--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       background-size: 150px;
       background-position: center;
     }
-    .banner-container {
-      height: 60;
+    <div class="banner-container"<>/div> {
+      height: 60px;
       background-image: url('BensBestBytesBanner.jpg');
       background-position: top center;
       background-repeat: no-repeat;
