--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
     background-repeat: repeat;
     background-size: 150px;
     background-position: center;
-    /* Add width/height or set to cover the parent if needed */
+    width: 50px;
+    height: 50px;
 }
 
 .banner-container {
     height: 60px;
-    background-image: url('BensBestBytesBanner.jpg');
+    cover: url('BensBestBytesBanner.jpg');
 }
 </style>
 
 <div class="body-background-fade"></div>
 <div class="banner-container"></div>
 
-    .container {
+     .container {
       height: 30vh;
       background-image: url('GraduationCyberSecurity.png');
       background-position: center;
