--- a/index.html
+++ b/index.html
@@ -5,33 +5,44 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-.body-background-fade::before {
-    content: "";
-    position: absolute;
-    background-image: url('BensBestBytesLogo.jpg');
-    background-repeat: repeat;
-    background-size: 150px;
-    background-position: center;
-    width: 50px;
-    height: 50px;
-}
+    /* Body background fade effect */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-image: url('BensBestBytesLogo.jpg');
+      background-repeat: repeat;
+      background-size: 150px;
+      opacity: 0.08; /* subtle fade */
+      z-index: 0;
+      pointer-events: none;
+    }
 
-.banner-container {
-    height: 60px;
-    cover: url('BensBestBytesBanner.jpg');
-}
-</style>
+    /* Banner at the top */
+    .banner-container {
+      height: 60px;
+      background-image: url('BensBestBytesBanner.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 100%;
+      z-index: 1;
+      position: relative;
+    }
 
-<div class="body-background-fade"></div>
-<div class="banner-container"></div>
-
-     .container {
+    /* Main content image */
+    .container {
       height: 30vh;
       background-image: url('GraduationCyberSecurity.png');
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
+      margin-top: 20px;
+      z-index: 1;
+      position: relative;
     }
+
+    /* Button styles */
     .button-container {
       text-align: center;
       margin-top: 20px;
@@ -39,27 +50,3 @@
     .button {
       padding: 10px 20px;
       background-color: #007BFF;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      text-decoration: none;
-      font-size: 16px;
-    }
-    .button:hover {
-      background-color: #0056b3;
-    }
-  </style>
-</head>
-<body class="background-fade">
-  <div class="banner-container"></div>
-  <div class="container"></div>
-  <p><b>Welcome to my webpage!</b></p>
-  <a href="https://tryhackme.com/p/b1tfl1pper" target="_blank" rel="noopener noreferrer">
-    Click me for my TryHackMe profile
-  </a>
-  <div class="button-container">
-    <a href="PASSWORDS_SUCK.html" class="button">Passwords Suck! But they don't have to</a>
-  </div>
-</body>
-</html>
