--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body.background-fade::before {
+    <div class="body.background-fade::before" ></div> {
       content: "";
       position: absolute;
       background-image: url('BensBestBytesLogo.jpg');
@@ -21,7 +21,7 @@
       background-repeat: no-repeat;
       background-size: contain;
     }
-    .container {
+    <div class =".container></div> {
       height: 30vh;
       background-image: url('GraduationCyberSecurity.png');
       background-position: center;
