--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       background-repeat: no-repeat;
       background-size: contain;
     }
-    <div class =".container></div> {
+    <div class =".container"></div> {
       height: 30vh;
       background-image: url('GraduationCyberSecurity.png');
       background-position: center;
