--- a/index.html
+++ b/index.html
@@ -1,51 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <title>Ben's Best Bytes</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    <div class="body.background-fade::before" ></div> {
-      content: "";
-      position: absolute;
-      background-image: url('BensBestBytesLogo.jpg');
-      background-repeat: repeat;
-      background-size: 150px;
-      background-position: center;
-    }
-    <div class="banner-container"<>/div> {
-      height: 60px;
-      background-image: url('BensBestBytesBanner.jpg');
-      background-position: top center;
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-    <div class="container"></div> {
-      height: 30vh;
-      background-image: url('GraduationCyberSecurity.png');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-    .button-container {
-      text-align: center;
-      margin-top: 20px;
-    }
-    .button {
-      padding: 10px 20px;
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      text-decoration: none;
-      font-size: 16px;
-    }
-    .button:hover {
-      background-color: #0056b3;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body class="background-fade">
   <div class="banner-container"></div>
