--- a/index.html
+++ b/index.html
@@ -1,81 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-  <title>Ben's Best Bytes</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BensBestBytes</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-image: url('BensBestBytesLogo.jpg');
-      background-repeat: repeat;
-      background-size: auto;
-    }
-
-    .header {
-      width: 100%;
-      height: 150px; /* Adjust height as needed */
-      background-image: url('BensBestBytesBanner.jpg');
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-position: center;
-      text-align: center;
-    }
-
-    .header h1 {
-      margin: 0;
-      padding: 50px 0; /* Adjust padding to center the text vertically */
-      color: white; /* Adjust color if needed */
-      font-family: Arial, sans-serif;
-      font-size: 2em;
-    }    
-    .container {
-      height: 30vh; /* 75% of viewport height */
-      background-image: url('GraduationCyberSecurity.png');
-      background-position: top;
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-    .button-container {
-      text-align: center;
-      margin-top: 20px;
-    }
-    .button {
-      padding: 10px 20px;
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      text-decoration: none;
-      font-size: 16px;
-    }
-    .button:hover {
-      background-color: #0056b3;
-    }
-  </style>
+<meta charset="utf-8">
+<title>Ben's Best Bytes</title>
+<link href="index.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container"></div>
-  <p><b>Welcome to my webpage!</b></p>
-  <a href="https://tryhackme.com/p/b1tfl1pper" target="_blank" rel="noopener noreferrer">
-    Click me for my TryHackMe profile
-  </a>
-
-  <!-- Button to reference PASSWORDS_SUCK.html -->
-  <div class="button-container">
-    <a href="PASSWORDS_SUCK.html" class="button">Passwords Suck! But they don't have to</a>
+  <div id="wb_Image1">
+    <img src="images/BensBestBytesBanner.jpg" id="Image1" alt="">
   </div>
+  <div class="backgrounds-wrapper">
+    <div class="side-by-side-backgrounds">
+      <div class="bg-left"></div>
+      <div class="bg-right"></div>
+    </div>
+    <div class="centered-images">
+      <img src="images/GraduationCyberSecurity.png" alt="Cyber Security Graduation">
+      <img src="images/Graduation Certificate III ICT photo.jpg" alt="Certificate III ICT">
+    </div>
+  </div>
+<footer class="footer-links">
+  <a href="about.html">About Me</a>
+  <a href="more-content.html">Click for More Content</a>
+</footer>
 </body>
 </html>
