--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="wb_Image1">
-    <img src="images/BensBestBytesBanner.jpg" id="Image1" alt="">
+    <img src="BensBestBytesBanner.jpg" id="Image1" alt="">
   </div>
   <div class="backgrounds-wrapper">
     <div class="side-by-side-backgrounds">
@@ -15,8 +15,8 @@
       <div class="bg-right"></div>
     </div>
     <div class="centered-images">
-      <img src="images/GraduationCyberSecurity.png" alt="Cyber Security Graduation">
-      <img src="images/Graduation Certificate III ICT photo.jpg" alt="Certificate III ICT">
+      <img src="GraduationCyberSecurity.png" alt="Cyber Security Graduation">
+      <img src="Graduation Certificate III ICT photo.jpg" alt="Certificate III ICT">
     </div>
   </div>
 <footer class="footer-links">
