--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 <footer class="footer-links">
-  <a href="AboutMe.html">About Me</a>
+  <a href="AboutMe.html">about Me</a>
   <a href="more-content.html">Click for More Content</a>
 </footer>
 </body>
