--- a/PASSWORDS_SUCK.html
+++ b/PASSWORDS_SUCK.html
@@ -87,5 +87,10 @@
   </p>
 
   <img src="thatsBetter.png" alt="Generated image" style="margin-top:2em;">
+<div style="text-align:center; margin-top:2em;">
+  <a href="index.html" style="display:inline-block; padding:0.7em 1.8em; background:#0F4761; color:white; border-radius:6px; text-decoration:none; font-size:1em; box-shadow:0 2px 6px #0001;">
+    Home
+  </a>
+</div>
 </body>
 </html>
