--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
     </div>
   </div>
 <footer class="footer-links">
-  <a href="AboutMe.html">about Me</a>
+  <a href="aboutMe.html">about Me</a>
   <a href="more-content.html">Click for More Content</a>
+<div style="text-align:center; margin-top:2em;">
+  <a href="index.html" style="display:inline-block; padding:0.7em 1.8em; background:#0F4761; color:white; border-radius:6px; text-decoration:none; font-size:1em; box-shadow:0 2px 6px #0001;">
+    Home
+  </a>
+</div>
 </footer>
 </body>
 </html>
