--- a/aboutMe.html
+++ b/aboutMe.html
@@ -57,5 +57,8 @@
         Warm regards,<br>
         Ben
     </div>
+      <a href="index.html" style="display:inline-block; padding:0.7em 1.8em; background:#0F4761; color:white; border-radius:6px; text-decoration:none; font-size:1em; box-shadow:0 2px 6px #0001;">
+    Home
+  </a>
 </body>
 </html>
