--- a/aboutMe.html
+++ b/aboutMe.html
@@ -56,7 +56,7 @@
     <div class="signature">
         Warm regards,<br>
         Ben
-    </div>
+    <div style="text-align: center;">
       <a href="index.html" style="display:inline-block; padding:0.7em 1.8em; background:#0F4761; color:white; border-radius:6px; text-decoration:none; font-size:1em; box-shadow:0 2px 6px #0001;">
     Home
   </a>
