--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
   </div>
 <footer class="footer-links">
-  <a href="aboutMe.html">about Me</a>
-  <a href="more-content.html">Click for More Content</a>
+  <a href="aboutMe.html" style="font-size: 3em;">About Me</a>
+<a href="more-content.html" style="font-size: 3em;">Click for More Content</a>
 <div style="text-align:center; margin-top:2em;">
 </div>
 </footer>
