--- a/aboutMe.html
+++ b/aboutMe.html
@@ -35,7 +35,7 @@
     <p>Hello,<br>
     I’m excited to introduce myself as a dedicated professional with a rich background in customer service, administration, and sales-roles where I’ve honed my communication, organisation, and leadership skills, including shift management and staff training. Over the past few years, I’ve channelled my curiosity and drive for growth into the dynamic world of Information Technology and Cyber Security.</p>
 
-    <h2>Career Transition: From Service to Information and Communications Technoloy and Cyber Security</h2>
+    <h2>Career Transition: From Service to Information and Communications Technology and Cyber Security</h2>
     <p>To support my transition, I completed a Certificate III in Information and Communications Technology and a Certificate IV in Cyber Security through TAFE Queensland Online. My commitment to continuous learning is reflected in my active participation on TryHackMe, where I’ve earned multiple certifications and ranked well into the top 1% of users, a testament to my determination, analytical thinking, and technical problem-solving abilities. The Red Team Capstone Challenge, in particular, was a highlight, pushing me beyond my comfort zone and strengthening my skills in offensive security.</p>
 
     <h2>Building Practical Experience</h2>
