--- a/more-content.html
+++ b/more-content.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>BensBestBytesMore</title>
-  <link href="more-content3.css" rel="stylesheet">
+  <link href="more-content.css" rel="stylesheet">
 </head>
 <body>
   <div class="content">
