--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,9 +1,10 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AboutMe</title>
+    <title>About Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -29,7 +30,7 @@
     </style>
 </head>
 <body>
-    <h1>AboutMe</h1>
+    <h1>About Me</h1>
 
     <h2>Introducing Myself: Passionate IT Professional with a Customer Service Edge</h2>
     <p>Hello,<br>
@@ -39,7 +40,7 @@
     <p>To support my transition, I completed a Certificate III in Information and Communications Technology and a Certificate IV in Cyber Security through TAFE Queensland Online. My commitment to continuous learning is reflected in my active participation on TryHackMe, where I’ve earned multiple certifications and ranked well into the top 1% of users, a testament to my determination, analytical thinking, and technical problem-solving abilities. The Red Team Capstone Challenge, in particular, was a highlight, pushing me beyond my comfort zone and strengthening my skills in offensive security.</p>
 
     <h2>Building Practical Experience</h2>
-    <p>Recognising the importance of hands-on experience, I’ve been proactive in building my technical portfolio. I’ve developed and hosted this static website using HTML and CSS on GitHub, with plans to expand into JavaScript and dynamic web development. My practical projects include hardware installations, upgrades, repairs, trouble shooting, Raspberry Pi builds, and scripting with Python and Bash/Nano. I’ve also launched my own domain-Ben’s Best Bytes-to offer local and remote IT support, with a Facebook business page ready for future outreach.</p>
+    <p>Recognising the importance of hands-on experience, I’ve been proactive in building my technical portfolio. I’ve developed and hosted this static website using HTML and CSS on GitHub, with plans to expand into JavaScript and dynamic web development. My practical projects include hardware installations, upgrades, repairs, trouble-shooting, Raspberry Pi builds, and scripting with Python and Bash/Nano. I’ve also launched my own domain: Ben’s Best Bytes (bensbestbytes.com) to offer local and remote IT support, with a Facebook business page ready for future outreach.</p>
 
     <h2>Personal Motivation and Values</h2>
     <p>On a personal note, I’m based south of Brisbane and am seeking to launch my IT career in a role that leverages my new skills and offers long-term growth. After 22 years with my current employer, I’m ready for a fresh challenge that is less physically demanding and more aligned with my passion for technology. My family is my pride, my partner and I have raised our children into independent, successful adults. I also have a strong sense of community, having volunteered with the State Emergency Service, and I look forward to contributing again when time permits.</p>
@@ -57,7 +58,7 @@
         Warm regards,<br>
         Ben
     <div style="text-align: center;">
-      <a href="index.html" style="display:inline-block; padding:0.7em 1.8em; background:#0F4761; color:white; border-radius:6px; text-decoration:none; font-size:1em; box-shadow:0 2px 6px #0001;">
+      <a href="index.html" style="display:inline-block; padding:0.7em 1.8em; background:#0F4761; color:white; border-radius:20px; text-decoration:none; font-size:1em; box-shadow:0 2px 20px #0001;">
     Home
   </a>
 </body>
