--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </div>
 <footer class="footer-links">
   <a href="aboutMe.html" style="font-size: 3em;">About Me</a>
-<a href="more-content.html" style="font-size: 3em;">Click for More Content</a>
-<div style="text-align:center; margin-top:2em;">
-</div>
+  <a href="more-content.html" style="font-size: 3em;">Click for More Content</a>
+  <div style="text-align:center; margin-top:2em; color: white;">
+    Email: contact@bensbestbytes.com
+  </div>
 </footer>
-</body>
 </html>
